Updated WhatsNew page and CSS

--- a/CrmPackage/WebResources/Script (JScript)/All Other Entities/arup_WhatsNewPage.htm
+++ b/CrmPackage/WebResources/Script (JScript)/All Other Entities/arup_WhatsNewPage.htm
@@ -174,29 +174,31 @@
         <!--<div class="pf w0 h0" id="pf1" data-page-no="1"><div class="pc pc1 w0 h0"><img class="bi x0 y0 w0 h0" alt="" src="../webresources/arup_splashscreen"><div class="t m0 x1 h1 y1 ff1 fs0 fc0 sc0 ls0 ws0">Arup CRM</div><div class="t m0 x1 h2 y2 ff2 fs1 fc0 sc0 ls0 ws0">January 2021 Release</div><div class="t m0 x2 h3 y3 ff1 fs2 fc1 sc0 ls0 ws0">Minor Updates Release</div><div class="t m0 x2 h4 y4 ff3 fs3 fc2 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div><div class="t m0 x2 h4 y5 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Updated look and feel and improved navigation </span></div><div class="t m0 x3 h5 y6 ff3 fs3 fc1 sc0 ls0 ws0"></div><div class="t m0 x2 h4 y7 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Inclusion of sustainable development information </span></div><div class="t m0 x3 h4 y8 ff3 fs3 fc1 sc0 ls0 ws0">on opportunity form (see link to guide)</div><div class="t m0 x2 h4 y15 ff3 fs3 fc2 sc0 ls0 ws0">  <span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div><div class="t m0 x2 h4 y16 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"></span><span class="ff1 fs4 fc1">New client relationship management features</span></div><div class="t m0 x3 h4 y17 ff3 fs3 fc1 sc0 ls0 ws0"></div><div class="t m0 x4 h6 y9 ff1 fs5 fc2 sc0 ls0 ws0">Links to Information</div><div class="t m0 x5 h2 ya ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://media.arup.com/media/Intro+to+CRM+Move+to+the+Cloud/1_tby0rt4p" target="_blank">Overview video</a></div><div class="t m0 x6 h2 yb ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://sharepoint.arup.com/communities/crmsp/Latest%20Changes/User%20Guide%20-%20External%20Opportunities%20-March%202020.pdf" target="_blank">User guide to new layout</a></div><div class="t m0 x10 h2 ybc ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://sharepoint.arup.com/communities/crmsp/Latest%20Changes/User%20Guide%20-%20Internal%20Opportunities%20March%202020.pdf" target="_blank">Guide to sustainable development fields</a></div><div class="t m0 x7 h7 yc ff1 fs6 fc3 sc0 ls0 ws0">Pipeline Management</div><div class="t m0 x8 h7 yd ff1 fs6 fc3 sc0 ls0 ws0">Client Relationship Management</div><div class="t m0 x9 h2 ye ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://www.yammer.com/arup.com/#/threads/inGroup?type=in_group&amp;feedId=4478702&amp;view=all" target="_blank"><p style="margin: 0px;">Join the conversations on<br>Yammer</p></a></div></div><div class="pi" data-data="{&quot;ctm&quot;:[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}"></div></div>-->
 
         <div class="pf w0 h0" id="pf1" data-page-no="1"><div class="pc pc1 w0 h0">
-    <img class="bi x0 y0 w0 h0" alt="" src="../webresources/arup_splashscreen"><div class="t m0 x1 h1 y1 ff1 fs0 fc0 sc0 ls0 ws0">Arup CRM</div><div class="t m0 x1 h2 y2 ff2 fs1 fc0 sc0 ls0 ws0">February 2021 Release</div><div class="t m0 x2 h3 y3 ff1 fs2 fc1 sc0 ls0 ws0">Minor Updates Release - Part 2</div>
+    <img class="bi x0 y0 w0 h0" alt="" src="../webresources/arup_splashscreen"><div class="t m0 x1 h1 y1 ff1 fs0 fc0 sc0 ls0 ws0">Arup CRM</div><div class="t m0 x1 h2 y2 ff2 fs1 fc0 sc0 ls0 ws0">May 2021 Release</div><div class="t m0 x2 h3 y3 ff1 fs2 fc1 sc0 ls0 ws0">Minor Updates Release</div>
     <div class="t m0 x2 h4 y4 ff3 fs3 fc2 sc0 ls0 ws0"><span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div>
-    <div class="t m0 x2 h4 y4 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Changes to the way opportunities are used to win a place</span></div>
-    <div class="t m0 x3 h4 y5 ff3 fs3 fc1 sc0 ls0 ws0">on a framework/panel/call-off and to win work under a </div>
-    <div class="t m0 x3 h4 y6 ff3 fs3 fc1 sc0 ls0 ws0">Framework</div>
+    <div class="t m0 x2 h4 y5 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Update to the Bid Review form to bring in discussion</span></div>
+    <div class="t m0 x3 h4 y6 ff3 fs3 fc1 sc0 ls0 ws0">questions</div>
 
     <div class="t m0 x2 h4 y7 ff3 fs3 fc2 sc0 ls0 ws0">  <span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div>
 
-
-    <div class="t m0 x2 h4 y8 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Introduction of 'Qualifications' tab and tagging for </span></div>
-    <div class="t m0 x3 h4 y9 ff3 fs3 fc1 sc0 ls0 ws0">Advisory Services on opportunity form</div>
+    <div class="t m0 x2 h4 y8 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"> </span><span class="ff1 fs4 fc1">Refresh of list of disciplines within Opportunity form to</span></div>
+    <div class="t m0 x3 h4 y9 ff3 fs3 fc1 sc0 ls0 ws0">reflect disciplines listed by HR</div>
 
     <div class="t m0 x2 h4 y10 ff3 fs3 fc2 sc0 ls0 ws0">  <span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div>
 
-    <div class="t m0 x2 h4 y11 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"></span><span class="ff1 fs4 fc1">Addition of consent fields on Contact form</span></div>
+    <div class="t m0 x2 h4 y11 ff3 fs3 fc2 sc0 ls0 ws0">  -<span class="_ _0"></span><span class="ff1 fs4 fc1">Other minor changes</span></div>
 
     <div class="t m0 x2 h4 y12 ff3 fs3 fc2 sc0 ls0 ws0">  <span class="_ _0"> </span><span class="ff1 fs4 fc1"></span></div>
 
-    <div class="t m0 x2 h4 y13 ff3 fs3 fc2 sc0 ls0 ws0">  We have updated our Support Portal to create a "Clients and</div>
-    <div class="t m0 x2 h4 y14 ff3 fs3 fc2 sc0 ls0 ws0">  Business" hub. It can be accessed via the link inside CRM.</div>
+    <div class="t m0 x2 h4 y13 ff3 fs3 fc2 sc0 ls0 ws0">  </div>
+    <div class="t m0 x2 h4 y14 ff3 fs3 fc2 sc0 ls0 ws0">  </div>
 
     <div class="t m0 x3 h4 y15 ff3 fs3 fc1 sc0 ls0 ws0"></div><div class="t m0 x4 h6 y17 ff1 fs5 fc2 sc0 ls0 ws0">Links to Information</div>
-    <div class="t m0 x5 h2 ya ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://arup.sharepoint.com/sites/essentials-global-clients-and-business" target="_blank"><p style="text-align:center">"Clients and Business" Hub</p></a></div><div class="t m0 x6 h2 yb ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://arup.sharepoint.com/sites/essentials-global-clients-and-business/SitePages/Frameworks.aspx" target="_blank"><p style="text-align:center">Opportunites and Frameworks Guide</p></a></div><div class="t m0 x7 h7 yc ff1 fs6 fc3 sc0 ls0 ws0">Pipeline Management</div><div class="t m0 x8 h7 yd ff1 fs6 fc3 sc0 ls0 ws0">Client Relationship Management</div><div class="t m0 x9 h2 ye ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://www.yammer.com/arup.com/#/threads/inGroup?type=in_group&amp;feedId=4478702&amp;view=all" target="_blank"><p style="margin: 0px;">Join the conversations on<br>Yammer</p></a></div>
+            <div class="t m0 x5 h2 ya ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://arup.sharepoint.com/sites/essentials-global-clients-and-business" target="_blank"><p style="text-align:center">Overview of Changes in this Release</p></a></div>
+            <div class="t m0 x6 h2 yb ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://arup.sharepoint.com/sites/essentials-global-clients-and-business" target="_blank"><p style="text-align:center">Changes to Bid  Review Quick Guide</p></a></div>
+            <div class="t m0 x10 h2 yf ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://arup.sharepoint.com/sites/essentials-global-clients-and-business" target="_blank"><p style="text-align:center">Changes to Disciplines Quick Guide</p></a></div>
+            
+            <div class="t m0 x7 h7 yc ff1 fs6 fc3 sc0 ls0 ws0">Pipeline Management</div><div class="t m0 x8 h7 yd ff1 fs6 fc3 sc0 ls0 ws0">Client Relationship Management</div><div class="t m0 x9 h2 ye ff1 fs1 fc3 sc0 ls0 ws0"><a href="https://www.yammer.com/arup.com/#/threads/inGroup?type=in_group&amp;feedId=4478702&amp;view=all" target="_blank"><p style="margin: 0px;">Join the conversations on<br>Yammer</p></a></div>
 </div><div class="pi" data-data="{&quot;ctm&quot;:[1.000000,0.000000,0.000000,1.000000,0.000000,0.000000]}"></div></div>
 
         <input id="message" onclick="showHideButton();" type="checkbox"> Don't show this again
