--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -43,40 +43,6 @@ There will be several copies of the web resource visible in the debugger as "aru
             margin: 4px;
         }
 
-        /*.mainButton {
-            -webkit-border-radius: 6px;
-            -moz-border-radius: 6px;
-            border-radius: 5px;
-            color: #FFFFFF;
-            font-family: Arial;
-            min-width: 280px;
-            width: 80%;
-            font-size: 16px;
-            font-weight: 400;
-            padding: 5px 10px 10px 5px;
-            background-color: #F04000;
-            box-shadow: 1px 1px 2px 2px #ab918f;
-            -webkit-box-shadow: 1px 5px 5px 1px #ab918f;
-            -moz-box-shadow: 1px 1px 2px 2px #ab918f;
-            border: solid #FFFFFF 1px;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-            text-align: center;
-            margin: 5px;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-
-            .mainButton:hover {
-                background: #E43326;
-                border: solid #FFFFFF 1px;
-                -webkit-border-radius: 6px;
-                -moz-border-radius: 6px;
-                border-radius: 6px;
-                text-decoration: none;
-            }*/
-
         .mainButton:active {
             background: #D42316;
             box-shadow: 1px 1px 2px 2px #ab918f;
@@ -84,39 +50,6 @@ There will be several copies of the web resource visible in the debugger as "aru
             -moz-box-shadow: 1px 1px 2px 2px #ab918f;
             -webkit-transform: translate(4px, 4px);
         }
-
-        /*.greenButton {
-            -webkit-border-radius: 6px;
-            -moz-border-radius: 6px;
-            border-radius: 5px;
-            color: #FFFFFF;
-            font-family: Arial;
-            min-width: 280px;
-            width: 80%;
-            font-size: 16px;
-            font-weight: 400;
-            padding: 5px 10px 10px 5px;
-            background-color: #B2D135;
-            box-shadow: 1px 1px 2px 2px #ab918f;
-            -webkit-box-shadow: 1px 5px 5px 1px #ab918f;
-            -moz-box-shadow: 1px 1px 2px 2px #ab918f;
-            border: solid #FFFFFF 1px;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-            text-align: center;
-            margin: 4px;
-            cursor: pointer;
-        }
-
-            .greenButton:hover {
-                background: #a3c12c;
-                border: solid #FFFFFF 1px;
-                -webkit-border-radius: 6px;
-                -moz-border-radius: 6px;
-                border-radius: 6px;
-                text-decoration: none;
-            }*/
 
         .blueButton:active {
             background: #91ac27;
@@ -129,9 +62,6 @@ There will be several copies of the web resource visible in the debugger as "aru
         .tabButtons {
             text-align: center;
         }
-
-
-
 
         .blueButton {
             -webkit-border-radius: 20px;
@@ -156,8 +86,22 @@ There will be several copies of the web resource visible in the debugger as "aru
             cursor: pointer;
         }
 
+        .caption {
+            color: #000;
+            font-family: Arial;
+            font-size: 10px;
+            font-weight: 400;
+            padding-top: 0px;
+            display: inline-block;
+            text-align: center;
+            margin: 4px;
+            margin-block-start: auto;
+        }
 
 
+        .buttondiv {
+            margin : 0
+        }
 
         .mainButton {
             -webkit-border-radius: 20px;
@@ -353,6 +297,9 @@ There will be several copies of the web resource visible in the debugger as "aru
                         if (!button.isredbutton)
                             span.className = "blueButton";
 
+                        if (!!button.backgroundcolor)
+                            span.setAttribute("style", "background-color:" + button.backgroundcolor);
+
                         if (button.islabel)
                             span.className = "label";
 
@@ -367,6 +314,19 @@ There will be several copies of the web resource visible in the debugger as "aru
                             if (button.hidden) {
                                 span.style.display = "none";
                             }
+                        }
+
+                        // Set up the caption (if present)
+                        if (!!button.caption) {
+                            var captionspan = document.createElement("div");
+                            captionspan.className = "caption";
+                            span.title = button.caption;
+                            captionspan.innerHTML = button.caption;
+                            $("#tabButtons")[0].appendChild(captionspan);
+                        }
+
+                        if (!!button.tooltip) {
+                            span.title = button.title;
                         }
                     }
                 }
@@ -404,6 +364,24 @@ There will be several copies of the web resource visible in the debugger as "aru
             }
         }
 
+        var helpText =
+        {
+            'label': "<br><p>Open help pane to access support information, e.g. on Arup contracting companies.</p>",
+            'islabel': true,
+            'hidden': function () { return parent.document.querySelector("#helpLauncher-button") === null },
+        };
+        var helpButton = {
+            'label': 'Opportunity Form Help',
+            'action': function(formContext) {
+                var helpButton = parent.document.querySelector("#helpLauncher-button");
+                helpButton.click();
+            },
+            'hidden': function() { return parent.document.querySelector("#helpLauncher-button") === null },
+            'backgroundcolor': '#105189',
+            'tooltip': "Open help pane to access support information, e.g. on Arup contracting companies.",
+        };
+
+
         // Declare the configuration of each button: label, action to take when pressed and whether the button should be hidden.
         buttonConfigs = {
 
@@ -428,6 +406,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'hidden': function () { return !parent.Arup.IsPJNCostTabVisible(formContext); },
                     'isredbutton': false
                 },              
+                helpText, helpButton,
                 {
                     'label': function () { return GetLabelTextForPJN(); },
                     'hidden': function () { return !parent.Arup.IsRequestPossibleJobEnabled(formContext); },
@@ -450,10 +429,10 @@ There will be several copies of the web resource visible in the debugger as "aru
                     },
                     'hidden': function () { return parent.Arup.IsBidDicisionApprovalEnable(formContext); },
                     'isredbutton': true
-
-                }
+                },
             ],
             'Cross_Region_Tab': [
+                helpText,helpButton,
                 {
                     'label': 'Progress to Developing Bid Stage',
                     'action': function () {
@@ -478,6 +457,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     },
                     'isredbutton': false
                 },
+                helpText, helpButton,
                 {
                     'label': function () { return GetLabelTextForPJN(); },
                     'hidden': function () { return !parent.Arup.IsRequestPossibleJobEnabled(formContext); },
@@ -494,6 +474,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 
             ],
             'Bid_Review_Submission_tab': [
+                helpText, helpButton,
                 {
                     'label': 'Approve Bid Review',
                     'action': function () {
@@ -530,6 +511,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 }
             ],
             'Confirmed_Job_Project_Tab': [
+                helpText, helpButton,
                 {
                     'label': 'Add Project Collaborators',
                     'action': function () {
@@ -558,6 +540,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     },
                     'isredbutton': false
                 },
+                helpText, helpButton,
                 {
                     'label': function () { return GetLabelTextForCommercialStage(); },
                     'hidden': false,
@@ -573,7 +556,8 @@ There will be several copies of the web resource visible in the debugger as "aru
                         ReturnToActiveTab(this);
                     },
                     'isredbutton': false
-                }
+                },
+                helpText,helpButton,
             ],
             'Project_Financials_Tab': [
                 {
@@ -582,9 +566,11 @@ There will be several copies of the web resource visible in the debugger as "aru
                         ReturnToActiveTab(this);
                     },
                     'isredbutton': false
-                }
+                },
+                helpText, helpButton,
             ],
             'PJN_Approval_tab': [
+                helpText, helpButton,
                 {
                     'label': 'Approve PJN Group Leader',
                     'action': function () {
@@ -691,7 +677,8 @@ There will be several copies of the web resource visible in the debugger as "aru
                         ReturnToActiveTab(this);
                     },
                     'isredbutton': false
-                }
+                },
+                helpText,helpButton,
             ],
             'Qualification_Tab': [
                 {
@@ -714,7 +701,8 @@ There will be several copies of the web resource visible in the debugger as "aru
                     },
                     'hidden': function () { return !parent.Arup.IsPreBidStage(formContext); },
                     'isredbutton': false
-                }
+                },
+                helpText,helpButton,
             ]
         };
 
